# DEV

./: .bashrc  .gitignore  .tmux.conf  .vimrc  .wezterm.lua  .wezterm_dropdown.lua  .zshrc  README.md  ai_front.py  arch_postinstall.sh  center.sh  center_app.sh  end4_arch_postinstall.sh  file  find_window.sh  firefox_to_center.sh  fix_ica_mime.sh  init.sh  install.sh  install_linuxbrew.sh  install_package.sh  install_plugin.sh  keyd_default.conf  launch_terminal.applescript  linux_brew.sh  macbrew.sh  mkcscope.sh  omarch_postinstall.sh  quickshell-changes.patch  setup_yazi_portal.sh  starship.toml  test.sh  waynergy.service  window_info.sh  zsh_setup.sh
2048/: Board.cpp  Board.h  CMakeLists.txt  ConsoleDevice.cpp  ConsoleDevice.h  IInputDevice.h  MatrixHelper.cpp  MatrixHelper.h  Unit.h  main.cpp
2048/test/: a.cpp  test
aerospace/: aerospace.toml  aerospace_set_next_mode.sh  workspace_cycle.sh
ags_for_sec_monitor/: app.tsx  package.json  run.sh  style.css  tsconfig.json
borders/: .bordersrc.swp  bordersrc
devshell/: devshell.sh  excute.sh  flake.nix  flake2.nix  install.sh
elephant/: clipboard.toml  config.toml
ghostty/: config  ghostty
hypr/: hyprland.conf  hyprlock.conf  monitors.conf
hypr_user_config/: ENVariables.conf  Startup_Apps.conf  UserKeybinds.conf  UserSettings.conf
karabiner/: karabiner.json
kime/: config.yaml
kmonad/: default.kbd  link_waynergy_kbd.sh  setup_kmonad.sh  waynergy.kbd
lgvideochat/: README.md  clientApp.sln  test.txt
neovim/: init.lua  nvim
nvim/: init.lua  lazy-lock.json
omarchy_hypr/: env.conf  execs.conf  (+4 more)
(+141 files in other folders)
